--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -33,7 +33,7 @@ jobs:
         id: semanticversion
         uses: mathieudutour/github-tag-action@v6.2
         with:
-          release_branches: master
+          release_branches: main
           github_token: ${{ secrets.GITHUB_TOKEN }}
           fetch_all_tags: true
           tag_prefix: ${{ env.TAG_PREFIX }}
