--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -73,7 +73,7 @@ jobs:
       ## Configure maven settings
       - name: Prepare maven settings
         env:
-          REPOSITORY_URL: ${{ secrets.LEVIGO_NEXUS_REPO_RELEASES }}
+          REPOSITORY_URL: ${{ secrets.NEXUS2_REPO_RELEASES }}
           REPOSITORY_RELEASE_USERID: ${{ secrets.PUB_NEXUS2_USERNAME_RW }}
           REPOSITORY_RELEASE_CREDENTIALS: ${{ secrets.PUB_NEXUS2_PASSWORD_RW}}
         run: |
