--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -73,9 +73,11 @@ jobs:
       ## Configure maven settings
       - name: Prepare maven settings
         env:
-          REPOSITORY_URL: ${{ secrets.NEXUS2_REPO_RELEASES }}
-          REPOSITORY_RELEASE_USERID: ${{ secrets.PUB_NEXUS2_USERNAME_RW }}
-          REPOSITORY_RELEASE_CREDENTIALS: ${{ secrets.PUB_NEXUS2_PASSWORD_RW}}
+          REPOSITORY_URL: ${{ vars.LEVIGO_MAVEN2_ALL_REPOSITORIES }}
+          REPOSITORY_USERID: ${{ secrets.LEVIGO_NEXUS_USERNAME_RO }}
+          REPOSITORY_CREDENTIALS: ${{ secrets.LEVIGO_NEXUS_PASSWORD_RO }}
+          REPOSITORY_RELEASE_USERID: ${{ secrets.LEVIGO_NEXUS_USERNAME }}
+          REPOSITORY_RELEASE_CREDENTIALS: ${{ secrets.LEVIGO_NEXUS_PASSWORD }}
         run: |
           echo NEXUS2_REPO_RELEASES ${{ secrets.NEXUS2_REPO_RELEASES }}
           mkdir -p ~/.m2
