fix(CORE-893): Add test

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
       <artifactId>logging</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <scope>test</scope>
+    </dependency>
+
     <!-- base library -->
     <dependency>
       <groupId>eu.europa.ec.joinup.sd-dss</groupId>
