fix(CORE-893): Adjust readme and add comments

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
   <properties>
     <jadice.utils.version>6.5.23</jadice.utils.version>
     <jadice.utils.groupId>org.jadice.util</jadice.utils.groupId>
+    <!-- If this version is updated also update it in the core module signature-dss-->
     <dss.version>6.1</dss.version>
 
     <maven.compiler.source>11</maven.compiler.source>
@@ -105,9 +106,6 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-      <!-- ########################################################################## -->
-      <!-- jadice utils dependencies -->
-      <!-- ########################################################################## -->
       <dependency>
         <groupId>${jadice.utils.groupId}</groupId>
         <artifactId>jadice-utils-bom</artifactId>
@@ -129,7 +127,6 @@
           </exclusion>
         </exclusions>
       </dependency>
-
     </dependencies>
   </dependencyManagement>
 
