--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Prepare maven settings
         env:
-          REPOSITORY_URL: ${{ vars.LEVIGO_MAVEN2_ALL_REPOSITORIES }}
+          REPOSITORY_URL: ${{ secrets.LEVIGO_NEXUS_REPO_RELEASES }}
           REPOSITORY_USERID: ${{ secrets.PUB_NEXUS2_USERNAME }}
           REPOSITORY_CREDENTIALS: ${{ secrets.PUB_NEXUS2_PASSWORD }}
         run: |
